// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`transaction write HTTP parity > creates a transaction with the Node field defaults and resolves the payee 1`] = `
{
  "bookId": 1,
  "checkNumber": "101",
  "createdAt": "<timestamp>",
  "createdBy": 1,
  "date": "2025-03-01",
  "description": null,
  "id": 2,
  "investmentSplits": [],
  "isFloating": true,
  "isReconciled": false,
  "notes": "",
  "payee": {
    "bookId": 1,
    "createdAt": "<timestamp>",
    "id": 2,
    "name": "Corner Store's",
  },
  "payeeId": 2,
  "recurringRuleId": null,
  "splits": [
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 1,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Checking",
        "parentId": null,
        "subtype": "bank",
        "type": "asset",
        "updatedAt": "<timestamp>",
      },
      "accountId": 1,
      "amount": -500,
      "bookId": 1,
      "id": 3,
      "transactionId": 2,
    },
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 3,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Groceries",
        "parentId": null,
        "subtype": null,
        "type": "expense",
        "updatedAt": "<timestamp>",
      },
      "accountId": 3,
      "amount": 500,
      "bookId": 1,
      "id": 4,
      "transactionId": 2,
    },
  ],
  "updatedAt": "<timestamp>",
  "updatedBy": 1,
}
`;

exports[`transaction write HTTP parity > creates investment splits on the derived account and rebuilds the lots 1`] = `
{
  "buy": {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": 1,
    "date": "2025-01-10",
    "description": "Buy",
    "id": 2,
    "investmentSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "action": "buy",
        "bookId": 1,
        "feesCents": 5,
        "id": 1,
        "priceMicros": 50000000,
        "security": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "fetchPrices": true,
          "fixedPriceMicros": null,
          "id": 1,
          "name": "Total Market",
          "securityType": "etf",
          "symbol": "VTI",
        },
        "securityId": 1,
        "sharesMicros": 2000000,
        "splitDenominator": null,
        "splitNumerator": null,
        "transactionId": 2,
      },
    ],
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": null,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": 10005,
        "bookId": 1,
        "id": 3,
        "transactionId": 2,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": -10005,
        "bookId": 1,
        "id": 4,
        "transactionId": 2,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": 1,
  },
  "dividend": {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": 1,
    "date": "2025-02-10",
    "description": "Dividend",
    "id": 3,
    "investmentSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "action": "dividend",
        "bookId": 1,
        "feesCents": 0,
        "id": 2,
        "priceMicros": 0,
        "security": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "fetchPrices": true,
          "fixedPriceMicros": null,
          "id": 1,
          "name": "Total Market",
          "securityType": "etf",
          "symbol": "VTI",
        },
        "securityId": 1,
        "sharesMicros": 0,
        "splitDenominator": null,
        "splitNumerator": null,
        "transactionId": 3,
      },
    ],
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": null,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 5,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": true,
          "name": "Brokerage Cash",
          "parentId": 4,
          "subtype": "cash",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 5,
        "amount": 500,
        "bookId": 1,
        "id": 5,
        "transactionId": 3,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 6,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Dividends",
          "parentId": null,
          "subtype": null,
          "type": "income",
          "updatedAt": "<timestamp>",
        },
        "accountId": 6,
        "amount": -500,
        "bookId": 1,
        "id": 6,
        "transactionId": 3,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": 1,
  },
  "sell": {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": 1,
    "date": "2025-04-10",
    "description": "Sell",
    "id": 5,
    "investmentSplits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "action": "sell",
        "bookId": 1,
        "feesCents": 0,
        "id": 4,
        "priceMicros": 30000000,
        "security": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "fetchPrices": true,
          "fixedPriceMicros": null,
          "id": 1,
          "name": "Total Market",
          "securityType": "etf",
          "symbol": "VTI",
        },
        "securityId": 1,
        "sharesMicros": 1000000,
        "splitDenominator": null,
        "splitNumerator": null,
        "transactionId": 5,
      },
    ],
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": null,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 1,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Checking",
          "parentId": null,
          "subtype": "bank",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 1,
        "amount": 3000,
        "bookId": 1,
        "id": 9,
        "transactionId": 5,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": -3000,
        "bookId": 1,
        "id": 10,
        "transactionId": 5,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": 1,
  },
  "split": {
    "bookId": 1,
    "checkNumber": null,
    "createdAt": "<timestamp>",
    "createdBy": 1,
    "date": "2025-03-10",
    "description": "Split",
    "id": 4,
    "investmentSplits": [
      {
        "account": null,
        "accountId": null,
        "action": "split",
        "bookId": 1,
        "feesCents": 0,
        "id": 3,
        "priceMicros": 0,
        "security": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "fetchPrices": true,
          "fixedPriceMicros": null,
          "id": 1,
          "name": "Total Market",
          "securityType": "etf",
          "symbol": "VTI",
        },
        "securityId": 1,
        "sharesMicros": 0,
        "splitDenominator": 1,
        "splitNumerator": 2,
        "transactionId": 4,
      },
    ],
    "isFloating": false,
    "isReconciled": false,
    "notes": null,
    "payee": null,
    "payeeId": null,
    "recurringRuleId": null,
    "splits": [
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": 0,
        "bookId": 1,
        "id": 7,
        "transactionId": 4,
      },
      {
        "account": {
          "bookId": 1,
          "createdAt": "<timestamp>",
          "icon": null,
          "id": 4,
          "isActive": true,
          "isFavorite": false,
          "isInvestmentCash": false,
          "name": "Brokerage",
          "parentId": null,
          "subtype": "investment",
          "type": "asset",
          "updatedAt": "<timestamp>",
        },
        "accountId": 4,
        "amount": 0,
        "bookId": 1,
        "id": 8,
        "transactionId": 4,
      },
    ],
    "updatedAt": "<timestamp>",
    "updatedBy": 1,
  },
}
`;

exports[`transaction write HTTP parity > creates investment splits on the derived account and rebuilds the lots 2`] = `
{
  "allocations": [
    {
      "basisCents": 2501,
      "bookId": 1,
      "id": 1,
      "lotId": 4,
      "proceedsCents": 3000,
      "sellSplitId": 4,
      "sharesMicros": 1000000,
      "transactionId": 5,
    },
  ],
  "lots": [
    {
      "accountId": 4,
      "acquiredDate": "2025-01-10",
      "bookId": 1,
      "closedTransactionId": null,
      "createdAt": "<timestamp>",
      "id": 4,
      "openedSplitId": 1,
      "openedTransactionId": 2,
      "originalBasisCents": 10005,
      "originalSharesMicros": 4000000,
      "remainingBasisCents": 7504,
      "remainingSharesMicros": 3000000,
      "securityId": 1,
    },
  ],
}
`;

exports[`transaction write HTTP parity > deletes a transaction, resets Plaid rows, and rebuilds lots 1`] = `
{
  "allocations": [],
  "lots": [],
}
`;

exports[`transaction write HTTP parity > replaces and clears investment splits and rebuilds lots after a date change 1`] = `
{
  "allocations": [],
  "lots": [
    {
      "accountId": 4,
      "acquiredDate": "2025-01-10",
      "bookId": 1,
      "closedTransactionId": null,
      "createdAt": "<timestamp>",
      "id": 3,
      "openedSplitId": 1,
      "openedTransactionId": 2,
      "originalBasisCents": 10000,
      "originalSharesMicros": 2000000,
      "remainingBasisCents": 10000,
      "remainingSharesMicros": 2000000,
      "securityId": 1,
    },
  ],
}
`;

exports[`transaction write HTTP parity > replaces and clears investment splits and rebuilds lots after a date change 2`] = `
{
  "allocations": [],
  "lots": [
    {
      "accountId": 4,
      "acquiredDate": "2025-01-10",
      "bookId": 1,
      "closedTransactionId": null,
      "createdAt": "<timestamp>",
      "id": 5,
      "openedSplitId": 3,
      "openedTransactionId": 2,
      "originalBasisCents": 12000,
      "originalSharesMicros": 3000000,
      "remainingBasisCents": 12000,
      "remainingSharesMicros": 3000000,
      "securityId": 1,
    },
  ],
}
`;

exports[`transaction write HTTP parity > replaces and clears investment splits and rebuilds lots after a date change 3`] = `
{
  "allocations": [],
  "lots": [],
}
`;

exports[`transaction write HTTP parity > updates fields, the payee, and the splits, and stamps updatedBy 1`] = `
{
  "bookId": 1,
  "checkNumber": null,
  "createdAt": "<timestamp>",
  "createdBy": 1,
  "date": "2025-01-05",
  "description": "",
  "id": 2,
  "investmentSplits": [],
  "isFloating": false,
  "isReconciled": true,
  "notes": null,
  "payee": {
    "bookId": 1,
    "createdAt": "<timestamp>",
    "id": 1,
    "name": "IKEA",
  },
  "payeeId": 1,
  "recurringRuleId": null,
  "splits": [
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 2,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Wallet",
        "parentId": null,
        "subtype": "cash",
        "type": "asset",
        "updatedAt": "<timestamp>",
      },
      "accountId": 2,
      "amount": -900,
      "bookId": 1,
      "id": 5,
      "transactionId": 2,
    },
    {
      "account": {
        "bookId": 1,
        "createdAt": "<timestamp>",
        "icon": null,
        "id": 3,
        "isActive": true,
        "isFavorite": false,
        "isInvestmentCash": false,
        "name": "Groceries",
        "parentId": null,
        "subtype": null,
        "type": "expense",
        "updatedAt": "<timestamp>",
      },
      "accountId": 3,
      "amount": 900,
      "bookId": 1,
      "id": 6,
      "transactionId": 2,
    },
  ],
  "updatedAt": "<timestamp>",
  "updatedBy": 1,
}
`;
